手动开启和关闭友盟推送 及 自定义 推送接收页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,13 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
 
+        <activity
+            android:name=".fragment.UMessageActivity"
+            android:label="@string/title_activity_umessage" />
+
+        <service
+            android:name=".service.MyPushIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
