--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-android:5.0+'
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation project(':PushSDK')
+    implementation "me.leolin:ShortcutBadger:1.1.19@aar"
 }
