1.启动界面查询信息数量，2.主界面更新数量，3.我的界面更新数量，4.站内信更新数量，5.收件箱更新数量，6. 界面推出更新数量，7.开启Service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,10 @@
         <service
             android:name=".service.MyPushIntentService"
             android:exported="false"></service>
+
+        <service
+            android:name=".service.BadgeIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
