为了适配小米手机中桌面角标而添加的Service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,6 +137,9 @@
         <service
             android:name=".service.BadgeIntentService"
             android:exported="false"></service>
+        <service
+            android:name=".service.BadgeIntentForXiaomiService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
