解决support28的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,18 @@ android {
     }
 }
 
+/*support 强制使用相同版本的库*/
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.0.2'
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
